SFDC DevOps Test/src/objects/Question_Log__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a question that a project team member has about a request.</description>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <description>Closing date of Question Log</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Closed&quot;), 
TODAY(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Answer for the Question Log</description>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User responsible to answer the Question Log</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Question_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <description>Related request&apos;s capability name</description>
        <formula>Request__r.Capability__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <description>Date of Question Log Creation.</description>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <description>Date of Question Log resolved.</description>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Additional details about Question Log.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <description>Expected Closing Date for Question Log.</description>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Severity of Question Log.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Detailed question.</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Related request to the question log</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Question Log</relationshipLabel>
        <relationshipName>Question_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Date of request of Question Log</description>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <description>Additional details about Question Log</description>
        <label>Resolution/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <description>Displays a status as red, green or yellow ball</description>
        <formula>IMAGE(if(ISPICKVAL(Status__c ,&quot;Clarification Requested&quot;) &amp;&amp; today() - datevalue(CreatedDate) &lt; 2, &quot;/img/samples/light_green.gif&quot;,
if(ISPICKVAL(Status__c ,&quot;Clarification Requested&quot;) &amp;&amp; today() - datevalue(CreatedDate) &lt; 5, &quot;/img/samples/light_yellow.gif&quot;,&quot;/img/samples/light_red.gif&quot;)),&quot;/img/samples/light_green.gif&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of Question Log</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who submitted the Question Log</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Question_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <description>Track of the question log</description>
        <label>Track</label>
        <picklist>
            <picklistValues>
                <fullName>Track 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Question Log</relationshipLabel>
        <relationshipName>Question_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Request__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Capability__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QL-{0000}</displayFormat>
        <label>Question Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>